# paper3_20260314_memory_llm_frozen_train

./: .gitignore  README.md  config.py  evaluate.py  gen_macros.py  main.py  metrics.py  pyproject.toml  results.json  train.py
data/: __init__.py  locomo.py  msc.py
methods/: __init__.py  base.py  baseline.py  m1_prefix.py  m2_xattn.py  m3_kv_ext.py  m4_hebbian.py  m5_gated.py  m6_slot.py
